# pyarcam-homekit

./: .gitignore  LICENSE  README.md  arcam.example.json  pyproject.toml  requirements.txt
src/pyarcam_homekit/: __init__.py  __main__.py
src/pyarcam_homekit/arcam/: __init__.py  config.py
src/pyarcam_homekit/homekit/: __init__.py  accessories.py
systemd/: pyarcam-homekit.service
